# 30-day-code-design-challenge

./: .gitignore  README.md  pyproject.toml
01-count-fruits/: exercise.py
02-type-annotations/: exercise.py
03-decoupling/exercise/: bank.py  main.py  service.py  stripe_service.py
04-dry/: exercise.py
05-string-formatting/: exercise.py
06-demeter/: exercise.py
07-better-discounts/: exercise.py
08-payment-strategy/: exercise.py
08-payment-strategy/payment/: payment_methods.py
09-plugins/exercise/: factory.py  loader.py  main.py  processors.json
09-plugins/exercise/plugins/: apple_pay.py  credit_card.py  google_pay.py  paypal.py
10-oo-to-functional/: exercise.py  functional.py  functional_v2.py
11-cohesion/: exercise.py
12-model-view-presenter/exercise/: co2.csv  main.py  model.py  presenter.py  view.py
13-inheritance/: exercise.py
14-abstraction/: exercise.py
15-higher-order-functions/: exercise.py
16-configuration/: config.json  exercise.py
17-concurrency/exercise/: main.py  req_http.py
18-refactoring/: main.py
18-refactoring/exercise/: main.py  texts.json  weather.py
19-itertools/: exercise.py
20-inappropriate-intimacy/: exercise.py
21-undo-redo/: command.py  delete.py  editor.py  insert.py  main.py
22-sql-to-orm/exercise/: app.py  db_queries.py  db_utils.py  events.db  main.py  models.py  queries.py  use_api.py
