[tool.poetry]
name = "30-day-code-design-challenge"
version = "0.1.0"
description = ""
authors = ["Jean Dos Santos <jeandsantos88@gmail.com>"]
readme = "README.md"
packages = [{include = "30_day_design_challenge"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
