[tool.poetry]
name = "30-day-code-design-challenge"
version = "0.1.0"
description = ""
authors = ["Jean Dos Santos <jeandsantos88@gmail.com>"]
readme = "README.md"
packages = [{include = "30_day_design_challenge"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
faker = "^19.11.0"
icecream = "^2.1.3"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
